fix alignment

--- a/ttkd_ui/app/components/students/detail/student.detail.scss
+++ b/ttkd_ui/app/components/students/detail/student.detail.scss
@@ -20,6 +20,6 @@ svg.stripes {
 	margin-top: 20px;
 }
 
-.h4-align {
-	margin-top: 40px
+.h3-align {
+	margin-top: 46px
 }
